# token-watch

./: .gitignore  README.md  index.html  latest.json  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: stats_dump.rs
src-tauri/icons/: icon.icns
src-tauri/src/: claude_stats.rs  lib.rs
src/lib/: tauri.ts
